silo_ext/build/err
[  2%] Built target river_test.exe
[  5%] Built target dev_test.exe
[ 27%] Built target river-2.exe
[ 48%] Built target river.exe
[ 70%] Built target unit_test.exe
Scanning dependencies of target silo_ext.exe
[ 71%] Building CXX object CMakeFiles/silo_ext.exe.dir/neworder.cpp.o
/home/river/tpcc/ccbench/silo_ext/neworder.cpp:359:1: error: expected ‘}’ at end of input
 } // namespace TPCC
 ^
CMakeFiles/silo_ext.exe.dir/build.make:296: recipe for target 'CMakeFiles/silo_ext.exe.dir/neworder.cpp.o' failed
make[2]: *** [CMakeFiles/silo_ext.exe.dir/neworder.cpp.o] Error 1
CMakeFiles/Makefile2:257: recipe for target 'CMakeFiles/silo_ext.exe.dir/all' failed
make[1]: *** [CMakeFiles/silo_ext.exe.dir/all] Error 2
Makefile:83: recipe for target 'all' failed
make: *** [all] Error 2
